<package format="2">
    <name>gvac_pid</name>
    <version>0.0.1</version>
    <description>gvac_robot PID dynamic_reconfigure</description>
    
    <maintainer email="gvac@todo.todo">gvac</maintainer>
    <license>TODO</license>
    <url>https://github.com/gssabu/gvac_pid</url>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

    <depend>dynamic_reconfigure</depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>gvac_msgs</depend>
</package>
